--- a/README
+++ b/README
@@ -11,3 +11,5 @@ nested { for Token strings break highlighting.
 Example:
 writeln(q{ foo(q{hello}); }); // will stop highlight at first }
 These are dumb plists files so there will probably never be a fix.
+*WORKAROUND: escape each nested } then remove escapes after final } is in place... 
+
